# flightgoggles

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md
flightgoggles/: CMakeLists.txt  package.xml
flightgoggles/config/drone/: drone.yaml
flightgoggles/launch/: core.launch
flightgoggles/msg/: FGParam.msg
flightgoggles/rviz/: third_person_drone_follower.rviz
flightgoggles/srv/: GetImage.srv  SetTransformStamped.srv  SetTransformStampedArr.srv
flightgoggles_ros_bridge/: CMakeLists.txt  package.xml
flightgoggles_ros_bridge/cfg/: Bridge.cfg
flightgoggles_ros_bridge/src/: CMakeLists.txt
flightgoggles_ros_bridge/src/CameraModel/: CMakeLists.txt  CameraModel.cpp  CameraModel.hpp  FisheyeModel.cpp  FisheyeModel.hpp
flightgoggles_ros_bridge/src/Common/: FlightGogglesClient.cpp  jsonMessageSpec.hpp
flightgoggles_ros_bridge/src/ROSClient/: CMakeLists.txt  ROSClient.cpp  ROSClient.hpp
